@@ -476,6 +476,7 @@ else {
 	<tr>
 		<td><?php echo lang('contenttype')?>:</td>
 		<td><?php echo $ctdropdown?></td>
+	</tr>
 	<tr>
 		<td><?php echo lang('parent')?>:</td>
 		<td><?php echo $dropdown?></td>
@@ -531,6 +532,12 @@ else {
 	<tr>
 		<td>*<?php echo lang('url')?>:</td>
 		<td><input type="text" name="url" maxlength="65" value="<?php echo $url?>" class="standard"></td>
+	</tr>
+	<?php } ?>
+	<?php if ($content_type == 'News') { ?>
+	<tr>
+		<td><?php echo lang('template')?>:</td>
+		<td><?php echo $dropdown2?></td>
 	</tr>
 	<?php } ?>
 	<tr>
